src/z80asm/z80asm2/t/20-preproc/expected/local_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/local_21.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/local_21.asm...
t/20-preproc/input/local_21.asm:1:1: error: Unexpected LOCAL directive
    local ; outside macro
    ^
t/20-preproc/input/local_21.asm:2:3: error: Unexpected LOCAL directive
    X local; outside macro
      ^
t/20-preproc/input/local_21.asm:7:14: error: Unexpected token after LOCAL: 12
    	label local 12 ; extra input
    	            ^
t/20-preproc/input/local_21.asm:8:1: error: Unexpected ENDM directive
    endm
    ^
# file: t/20-preproc/input/local_21.asm
EndOfLine	"\n"	9:1	
# file: t/20-preproc/input/local_21.asm
Identifier	"MACRO"	3:7	keyword=MACRO 
Identifier	"M1"	3:7	
EndOfLine	"\n"	3:7	
Identifier	"ENDM"	3:7	keyword=ENDM 
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
